--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ ul,li{
 	line-height:22px;
 	text-align: center;
 	padding: 13px 30px;
-	color:#ffffff;
+	color:#9147ff;
 	font-weight:500;
 	text-transform: uppercase;
 	letter-spacing:.5px;
